<resources>
    <string name="app_name">Weather</string>
    <string name="save_location">Save Location</string>
    <string name="add_location">Add Location</string>
    <string name="weather_details">Weather Details</string>
    <string name="search_location">Search Location</string>
    <string name="country">Country:</string>
    <string name="state">State:</string>
    <string name="city">City:</string>
    <string name="saved_location">Saved Locations</string>
    <string name="select_location">Please select any location</string>
</resources>